style.css
/* ... */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background: linear-gradient(to bottom, #020e22, #111111);
  margin: 0;
  color: var(--text-light);
  font-family: "Segoe UI", sans-serif;
}

/* =============== Notice Panel ===============
#dev-notice {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 9999;
}

.notice-box {
  background: #111;
  color: white;
  padding: 40px;
  border-radius: 15px;
  width: 400px;
  text-align: center;
  box-shadow: 0 0 30px var(--primary-soft);
  position: relative;
  animation: fadeIn 0.5s ease;
}

.notice-box h2 {
  color: var(--primary);
  margin-bottom: 20px;
}

.notice-box p {
  font-size: 16px;
  line-height: 1.6;
}

#close-notice {
  position: absolute;
  top: 15px;
  right: 20px;
  cursor: pointer;
  font-size: 24px;
  color: var(--primary);
}

#close-notice:hover {
  color: white;
}

/* Animation of the Notice Panel */
@keyframes fadeIn {
  from {
    opacity: 0;
    transform: scale(0.9);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}
*/

/* =============== Top =============== */
#top-nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 70px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 40px;
  background: transparent;
  transition: 0.3s ease;
  z-index: 1001;
}

#top-nav.scrolled {
  background: #0a101a;
}

.watermark {
  left: 80px;
  font-size: 28px;
  font-family: monospace;
  font-weight: bold;
  color: var(--primary);
  z-index: 1001;
}

/* Desktop Navigation */
.desktop-nav a {
  color: var(--text-light);
  font-weight: bold;
  margin-left: 25px;
  text-decoration: none;
  transition: 0.3s ease;
}

.desktop-nav a:hover {
  color: var(--primary);
  text-shadow: 0 0 8px var(--primary);
}
/* Mobile Navigation */
#menu-toggle {
  display: none;
  font-size: 28px;
  color: var(--primary);
  cursor: pointer;
  transition: 0.3s;
}

#menu-toggle:hover {
  transform: scale(1.1);
}

#topbar {
  position: fixed;
  top: -100%; /*hide*/
  left: 0;
  width: 100%;
  /* height: 50vh; */
  background: rgba(1, 34, 5, 0.9);
  transition: transform 0.3s ease;
  transform: translateY(-100%);
  z-index: 1000;
}

#topbar.active {
  transform: translateY(0);
}

#topbar ul {
  list-style: none;
  margin-top: 80px;
  text-align: center;
}

#topbar li {
  margin: 20px 0;
}

#topbar a {
  display: block;
  color: #aaa;
  text-decoration: none;
  font-size: 16px;
}

#topbar a:hover {
  color: #fff;
}

/* =============== Main Section =============== */
section {
  padding: 80px 10%;
  min-height: 100vh;
}

h1,
h2 {
  color: var(--primary);
  text-shadow: 0 0 10px var(--primary-soft);
}
/* ================ Home-Profile ================= */
.profile-container {
  display: flex;
  align-items: center;
  gap: 60px;
  padding: 80px 50px;
  flex-wrap: wrap;
}

.profile-text {
  flex: 1 1 300px;
}

.profile-text p,
.profile-text .intro {
  color: var(--text-muted);
  font-weight: bold;
}

#welcome-message {
  font-size: 20px;
  color: var(--primary);
  margin-bottom: 10px;
  padding: 5px 10px;
  background-color: var(--card-bg);
  border-radius: 12px;
  display: inline-block;
}

.profile-text h1 {
  font-size: 36px;
  margin-bottom: 30px;
  color: var(--primary);
}

.profile-text .intro {
  font-size: 20px;
  line-height: 1.6;
  color: var(--text-muted);
}

.profile-image {
  position: relative;
  width: 300px;
  height: 300px;
  flex-shrink: 0;
}

.profile-image img {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  object-fit: cover;
  position: relative;
  z-index: 2;
}

/* Profile Picture Border Animation */
.animated-ring {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  z-index: 1;
  background: conic-gradient(from 0deg, #b1beb9, #9aa6a3, #b4bdba);
  filter: blur(10px);
  opacity: 0.8;

  animation:
    rotateRing 1s linear infinite,
    pulseRing 2s ease-in-out infinite;
}

/* Profile Picture Border Animation - Keyframes */
@keyframes rotateRing {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes pulseRing {
  0%,
  100% {
    transform: scale(1);
    opacity: 0.7;
  }
  50% {
    transform: scale(1.1);
    opacity: 1;
  }
}

/* ========== About me ========== */
h2 {
  text-align: left;
  font-size: 40px;
  margin-bottom: 50px;
  color: var(--primary);
}

.about-container {
  display: flex;
  max-width: 1400px;
  margin: 60px auto;
  border-radius: 12px;
  overflow: hidden;
  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.4);
}

/* LHS - Tabs */
.about-tabs {
  display: flex;
  flex-direction: column;
  padding: 30px 0;
  background: var(--bg-section);
  border-right: 1px solid var(--primary-soft);
}

.tab-btn {
  background: none;
  border: none;
  color: var(--text-light);
  font-size: 16px;
  padding: 14px 30px;
  text-align: left;
  cursor: pointer;
  transition: all 0.3s ease;
  position: relative;
}

.tab-btn:hover {
  color: var(--primary);
  transform: translateX(4px);
}
.tab-btn.active {
  color: var(--primary);
  font-weight: 600;
}

.tab-btn.active::before {
  content: "";
  position: absolute;
  left: 0;
  top: 50%;
  transform: translateY(-50%);
  width: 4px;
  height: 60%;
  background: var(--primary);
  border-radius: 2px;
}

/* RHS - Content */
.about-content {
  flex: 1;
  padding: 50px;
  background: var(--card-bg);
  color: white;
  position: relative;
  line-height: 1.5;
}

.about-content p {
  color: var(--text-light);
  padding: 3px 0;
}

.tab-section {
  opacity: 0;
  transform: translateY(10px);
  transition: all 0.3s ease;
  display: none;
}

.tab-section.active {
  display: block;
  opacity: 1;
  transform: translateY(0);
}

.tab-section[data-content="bio"] {
  text-align: justify;
}

.education-item,
.experience-item {
  margin-bottom: 30px;
  padding-left: 10px;
  border-left: 3px solid var(--primary);
}
/* ... */

